Update to latest TeaVM